--- a/css/home.css
+++ b/css/home.css
@@ -2,3 +2,13 @@ img.header {
     border-radius: 10px;
     width: 200px;
 }
+
+div.blog-container {
+    margin-top: 20px;
+}
+
+div.blog-card {
+    border: 1px var(--color-gray) solid;
+    padding: 15px;
+    margin: 5px 0;
+}
