--- a/css/home.css
+++ b/css/home.css
@@ -10,5 +10,12 @@ div.blog-container {
 div.blog-card {
     border: 1px var(--color-gray) solid;
     padding: 15px;
-    margin: 5px 0;
+    margin: 20px 0;
+}
+
+div.blog-card a {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    transform: translate(-10px, -10px);
 }
