--- a/css/global.css
+++ b/css/global.css
@@ -19,7 +19,6 @@ nav {
     position: fixed;
     top: 0;
     box-shadow: none;
-    height: var(--nav-height);
     background-color: transparent;
     width: 100%;
     z-index: 1001;
@@ -32,22 +31,34 @@ nav div.container.scrolled {
     border-radius: 0;
 }
 
-i#close {
+i#close, #loading {
     color: white;
     position: absolute !important;
     right: 20px;
     top: 15px;
-    font-size: 30px;
+    z-index: 1000;
+    font-size: 36px;
+    display: none;
+}
+
+i#hamburger {
+    color: white;
+    position: absolute !important;
+    right: 20px;
+    top: 15px;
+    z-index: 1000;
+    font-size: 36px;
 }
 
 nav div.container {
     box-shadow: none;
+    position: relative;
     overflow: hidden;
     transition: var(--default-transition) box-shadow;
     width: var(--default-width);
     background-color: var(--color-gray);
     margin: auto;
-    height: 100%;
+    min-height: var(--nav-height);
     padding: 0 30px;
     border-radius: 10px 10px 0 0;
     border: 1px gray solid;
@@ -55,20 +66,34 @@ nav div.container {
 }
 
 nav div.container div.animator {
-    transition: transform 0.5s ease-out, opacity 0.5s ease-out;
+    transition: transform 0.5s ease-in, opacity 0.4s ease-out;
     border-radius: 50%;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
+    will-change: transform, opacity;
     opacity: 0;
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%) scale(2);
 }
 
+nav div.container div#mobile-nav button:nth-child(2) {
+    margin-top: var(--nav-height);
+}
+
+nav div.container div#mobile-nav button {
+    display: block;
+    margin: auto;
+    width: 100%;
+}
+
+nav div.container div#mobile-nav button:focus {
+    outline: none;
+}
 
 nav div.container button {
-    height: 100%;
+    height: var(--nav-height);
     width: 150px;
     position: relative;
     border-style: none;
@@ -131,5 +156,10 @@ h1.title {
         transition: none;
         border-radius: 0;
         border: none;
+    }
+
+    i#loading {
+        left: 20px;
+        right: 0;
     }
 }
