--- a/css/project-desc.css
+++ b/css/project-desc.css
@@ -2,3 +2,34 @@ a.title {
     font-size: 36px;
 }
 
+p {
+    font-size: 18px;
+}
+
+strong {
+    font-size: 20px;
+}
+
+img.icon {
+    max-width: 75px;
+    margin: 10px;
+}
+
+@media (max-width: 500px) {
+    a.title {
+        font-size: 24px;
+    }
+
+    p {
+        font-size: 16px;
+    }
+
+    strong {
+        font-size: 18px;
+    }
+
+    img.icon {
+        max-width: 60px;
+        margin: 5px;
+    }
+}
